# Craftmine

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build.yml
src/: application.cpp  application.hpp  assets.cpp  assets.hpp  atlas.cpp  atlas.hpp  fwd.hpp  hash.hpp  main_layer.cpp  main_layer.hpp  main_scene.cpp  main_scene.hpp  pch.hpp  quad.hpp  scene.cpp  scene.hpp  typedefs.hpp
src/scripts/: player.cpp  player.hpp  world_manager.cpp  world_manager.hpp
src/world/: block.hpp  chunk.cpp  chunk.hpp  generator.cpp  generator.hpp  world.cpp  world.hpp
src/world_generator/: chunk_generator.cpp  chunk_generator.hpp
